--- a/drivers/iio/frequency/Kconfig
+++ b/drivers/iio/frequency/Kconfig
@@ -23,6 +23,7 @@ config AD9508
 config AD9523
 	tristate "Analog Devices AD9523 Low Jitter Clock Generator"
 	depends on SPI
+	depends on COMMON_CLK
 	help
 	  Say yes here to build support for Analog Devices AD9523 Low Jitter
 	  Clock Generator. The driver provides direct access via sysfs.
@@ -33,6 +34,7 @@ config AD9523
 config AD9528
 	tristate "Analog Devices AD9528 Low Jitter Clock Generator"
 	depends on SPI
+	depends on COMMON_CLK
 	help
 	  Say yes here to build support for Analog Devices AD9528 Low Jitter
 	  Clock Generator. The driver provides direct access via sysfs.
