arch: zynq: remove macb HW timestamp support
By default, when enabling the macb driver, the HW timestamp feature/support
will also be enabled.
This seems to be problematic on Zynq, as Xilinx seems to have done some
changes in the macb driver that cause division-by-zero [for Zynq].

Commit 48a707ae293d ("net: macb: ptp: initialize tsu_rate") tried to fix
this, but now it looks like some other weird errors have been showing up
(on ZedBoard) with various CPU stalls. This could be happening because of
some other faulty logic in the PTP part of the macb driver.

After disabling this, ZedBoard works fine. This was seen mostly with the
ADIN1300 dual-phy board. This wasn't seen on other setups with the board's
built-in ethernet PHY.

In any case, the 1588/PTP support is mostly intended for Zynq Ultrascale.
So, Xilinx seems to have added some support for this, which isn't upstream
yet, and potentially breaks Zynq [maybe just ZedBoard].

Rather than fixing it, just disable.
And in a next patch, commit 8a707ae293d ("net: macb: ptp: initialize
tsu_rate") will be reverted.

Signed-off-by: Alexandru Ardelean <alexandru.ardelean@analog.com>
(cherry picked from commit 1ce04ec6faa3bc86749da1a30aba869f6e12d7cb)

--- a/arch/arm/configs/zynq_xcomm_adv7511_defconfig
+++ b/arch/arm/configs/zynq_xcomm_adv7511_defconfig
@@ -99,6 +99,7 @@ CONFIG_MACSEC=y
 CONFIG_TUN=y
 # CONFIG_NET_VENDOR_BROADCOM is not set
 CONFIG_MACB=y
+# CONFIG_MACB_USE_HWSTAMP is not set
 # CONFIG_NET_VENDOR_CIRRUS is not set
 # CONFIG_NET_VENDOR_FARADAY is not set
 # CONFIG_NET_VENDOR_INTEL is not set
